--- a/exercise1.ipynb
+++ b/exercise1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "'mmai5100postgres.canadacentral.cloudapp.azure.com'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,295 @@
        "[1826 rows x 14 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_sql(sql = 'SELECT * FROM dimensions.date_dimension;', con=engine)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sk_date</th>\n",
+       "      <th>date</th>\n",
+       "      <th>day_name</th>\n",
+       "      <th>day_of_month</th>\n",
+       "      <th>day_of_year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>month_name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>year_week</th>\n",
+       "      <th>week</th>\n",
+       "      <th>running_week</th>\n",
+       "      <th>year_quarter</th>\n",
+       "      <th>quarter</th>\n",
+       "      <th>running_quarter</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20190101</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-W01</td>\n",
+       "      <td>W01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-Q1</td>\n",
+       "      <td>Q1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20190102</td>\n",
+       "      <td>2019-01-02</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-W01</td>\n",
+       "      <td>W01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-Q1</td>\n",
+       "      <td>Q1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20190103</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-W01</td>\n",
+       "      <td>W01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-Q1</td>\n",
+       "      <td>Q1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20190104</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-W01</td>\n",
+       "      <td>W01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-Q1</td>\n",
+       "      <td>Q1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20190105</td>\n",
+       "      <td>2019-01-05</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-W01</td>\n",
+       "      <td>W01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-Q1</td>\n",
+       "      <td>Q1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1821</th>\n",
+       "      <td>20231227</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>27</td>\n",
+       "      <td>361</td>\n",
+       "      <td>12</td>\n",
+       "      <td>December</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2023-W52</td>\n",
+       "      <td>W52</td>\n",
+       "      <td>261</td>\n",
+       "      <td>2023-Q4</td>\n",
+       "      <td>Q4</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1822</th>\n",
+       "      <td>20231228</td>\n",
+       "      <td>2023-12-28</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>28</td>\n",
+       "      <td>362</td>\n",
+       "      <td>12</td>\n",
+       "      <td>December</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2023-W52</td>\n",
+       "      <td>W52</td>\n",
+       "      <td>261</td>\n",
+       "      <td>2023-Q4</td>\n",
+       "      <td>Q4</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1823</th>\n",
+       "      <td>20231229</td>\n",
+       "      <td>2023-12-29</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>29</td>\n",
+       "      <td>363</td>\n",
+       "      <td>12</td>\n",
+       "      <td>December</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2023-W52</td>\n",
+       "      <td>W52</td>\n",
+       "      <td>261</td>\n",
+       "      <td>2023-Q4</td>\n",
+       "      <td>Q4</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1824</th>\n",
+       "      <td>20231230</td>\n",
+       "      <td>2023-12-30</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>30</td>\n",
+       "      <td>364</td>\n",
+       "      <td>12</td>\n",
+       "      <td>December</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2023-W52</td>\n",
+       "      <td>W52</td>\n",
+       "      <td>261</td>\n",
+       "      <td>2023-Q4</td>\n",
+       "      <td>Q4</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825</th>\n",
+       "      <td>20231231</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>31</td>\n",
+       "      <td>365</td>\n",
+       "      <td>12</td>\n",
+       "      <td>December</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2023-W52</td>\n",
+       "      <td>W52</td>\n",
+       "      <td>261</td>\n",
+       "      <td>2023-Q4</td>\n",
+       "      <td>Q4</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1826 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       sk_date        date   day_name  day_of_month  day_of_year  month  \\\n",
+       "0     20190101  2019-01-01    Tuesday             1            1      1   \n",
+       "1     20190102  2019-01-02  Wednesday             2            2      1   \n",
+       "2     20190103  2019-01-03   Thursday             3            3      1   \n",
+       "3     20190104  2019-01-04     Friday             4            4      1   \n",
+       "4     20190105  2019-01-05   Saturday             5            5      1   \n",
+       "...        ...         ...        ...           ...          ...    ...   \n",
+       "1821  20231227  2023-12-27  Wednesday            27          361     12   \n",
+       "1822  20231228  2023-12-28   Thursday            28          362     12   \n",
+       "1823  20231229  2023-12-29     Friday            29          363     12   \n",
+       "1824  20231230  2023-12-30   Saturday            30          364     12   \n",
+       "1825  20231231  2023-12-31     Sunday            31          365     12   \n",
+       "\n",
+       "     month_name  year year_week week  running_week year_quarter quarter  \\\n",
+       "0       January  2019  2019-W01  W01             1      2019-Q1      Q1   \n",
+       "1       January  2019  2019-W01  W01             1      2019-Q1      Q1   \n",
+       "2       January  2019  2019-W01  W01             1      2019-Q1      Q1   \n",
+       "3       January  2019  2019-W01  W01             1      2019-Q1      Q1   \n",
+       "4       January  2019  2019-W01  W01             1      2019-Q1      Q1   \n",
+       "...         ...   ...       ...  ...           ...          ...     ...   \n",
+       "1821   December  2023  2023-W52  W52           261      2023-Q4      Q4   \n",
+       "1822   December  2023  2023-W52  W52           261      2023-Q4      Q4   \n",
+       "1823   December  2023  2023-W52  W52           261      2023-Q4      Q4   \n",
+       "1824   December  2023  2023-W52  W52           261      2023-Q4      Q4   \n",
+       "1825   December  2023  2023-W52  W52           261      2023-Q4      Q4   \n",
+       "\n",
+       "      running_quarter  \n",
+       "0                   1  \n",
+       "1                   1  \n",
+       "2                   1  \n",
+       "3                   1  \n",
+       "4                   1  \n",
+       "...               ...  \n",
+       "1821               20  \n",
+       "1822               20  \n",
+       "1823               20  \n",
+       "1824               20  \n",
+       "1825               20  \n",
+       "\n",
+       "[1826 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,18 +758,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "create_table_query = '''\n",
-    "CREATE TABLE IF NOT EXISTS final_exam.date_dimension (   \n",
+    "CREATE TABLE IF NOT EXISTS final_exam1.date_dimension (\n",
     ");\n",
     "'''\n",
     "\n",
     "with engine.connect() as connection:\n",
-    "    connection.execute('CREATE SCHEMA IF NOT EXISTS final_exam;')\n",
+    "    connection.execute('CREATE SCHEMA IF NOT EXISTS final_exam1;')\n",
+    "    connection.execute('DROP TABLE IF EXISTS final_exam1.date_dimension')\n",
     "    connection.execute(create_table_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "closing parenthesis '}' does not match opening parenthesis '(' on line 1 (443840937.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [35]\u001b[0;36m\u001b[0m\n\u001b[0;31m    }\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m closing parenthesis '}' does not match opening parenthesis '(' on line 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.to_sql(\n",
+    "name = 'date_dimension',\n",
+    "schema = 'final_exam1',\n",
+    "con = engine,\n",
+    "if_exists = 'replace',\n",
+    "index = False,\n",
+    "method='multi'\n",
+    "}\n",
+    ")"
    ]
   },
   {
