--- a/exercise2.ipynb
+++ b/exercise2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
        "  'total_was_estimated': False}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
        "'https://data.ontario.ca/api/3/action/help_show?name=datastore_search'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2570,7 +2570,7 @@
        " 'total_was_estimated': False}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2581,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3789,7 +3789,7 @@
        "  'total_individuals_3doses': None}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3800,7 +3800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -4091,7 +4091,7 @@
        "[100 rows x 12 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4110,7 +4110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -4159,7 +4159,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4170,7 +4170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -4219,7 +4219,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4227,6 +4227,370 @@
    "source": [
     "dup = Vaccine[Vaccine.duplicated()]\n",
     "dup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100 entries, 0 to 99\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                                       Non-Null Count  Dtype  \n",
+      "---  ------                                       --------------  -----  \n",
+      " 0   _id                                          100 non-null    int64  \n",
+      " 1   report_date                                  100 non-null    object \n",
+      " 2   previous_day_total_doses_administered        100 non-null    int64  \n",
+      " 3   previous_day_at_least_one                    100 non-null    int64  \n",
+      " 4   previous_day_fully_vaccinated                100 non-null    int64  \n",
+      " 5   previous_day_3doses                          0 non-null      object \n",
+      " 6   total_doses_administered                     100 non-null    int64  \n",
+      " 7   total_individuals_at_least_one               100 non-null    object \n",
+      " 8   total_individuals_partially_vaccinated       100 non-null    object \n",
+      " 9   total_doses_in_fully_vaccinated_individuals  100 non-null    object \n",
+      " 10  total_individuals_fully_vaccinated           100 non-null    object \n",
+      " 11  total_individuals_3doses                     0 non-null      object \n",
+      " 12  new_doses                                    99 non-null     float64\n",
+      "dtypes: float64(1), int64(5), object(7)\n",
+      "memory usage: 10.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "Vaccine.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "feature engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Vaccine['new_doses'] = Vaccine['total_doses_administered'].diff(1)\n",
+    "Vaccine['new_doses_three_vaccines'] = Vaccine['previous_day_3doses']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Vaccine['new_doses_unvaccinated'] = (Vaccine['total_doses_administered']-Vaccine['previous_day_at_least_one'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Vaccine['new_doses_one_vaccine'] = (Vaccine['previous_day_at_least_one']-Vaccine['previous_day_fully_vaccinated'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Vaccine['previous_day_3doses'].fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Vaccine['new_doses_two_vaccines'] = (Vaccine['previous_day_fully_vaccinated']-Vaccine['previous_day_3doses'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Vaccine['new_doses_three_vaccines'] = Vaccine['previous_day_3doses'].diff(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "relevant_columns = ['new_doses', 'new_doses_unvaccinated', 'new_doses_one_vaccine', 'new_doses_two_vaccines', 'new_doses_three_vaccines']\n",
+    "\n",
+    "Vaccine[relevant_columns]\n",
+    "\n",
+    "cleaned_vaccine = Vaccine[relevant_columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>new_doses</th>\n",
+       "      <th>new_doses_unvaccinated</th>\n",
+       "      <th>new_doses_one_vaccine</th>\n",
+       "      <th>new_doses_two_vaccines</th>\n",
+       "      <th>new_doses_three_vaccines</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25966</td>\n",
+       "      <td>6240</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4615.0</td>\n",
+       "      <td>32220</td>\n",
+       "      <td>4597</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5396.0</td>\n",
+       "      <td>36830</td>\n",
+       "      <td>5386</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5995.0</td>\n",
+       "      <td>42221</td>\n",
+       "      <td>5993</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9687.0</td>\n",
+       "      <td>48239</td>\n",
+       "      <td>9641</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>79583.0</td>\n",
+       "      <td>2721881</td>\n",
+       "      <td>75827</td>\n",
+       "      <td>1887</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>108012.0</td>\n",
+       "      <td>2802663</td>\n",
+       "      <td>101888</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>114079.0</td>\n",
+       "      <td>2911581</td>\n",
+       "      <td>106077</td>\n",
+       "      <td>4028</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>109854.0</td>\n",
+       "      <td>3025916</td>\n",
+       "      <td>101323</td>\n",
+       "      <td>4301</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>109250.0</td>\n",
+       "      <td>3135304</td>\n",
+       "      <td>101632</td>\n",
+       "      <td>3854</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    new_doses  new_doses_unvaccinated  new_doses_one_vaccine  \\\n",
+       "0         NaN                   25966                   6240   \n",
+       "1      4615.0                   32220                   4597   \n",
+       "2      5396.0                   36830                   5386   \n",
+       "3      5995.0                   42221                   5993   \n",
+       "4      9687.0                   48239                   9641   \n",
+       "..        ...                     ...                    ...   \n",
+       "95    79583.0                 2721881                  75827   \n",
+       "96   108012.0                 2802663                 101888   \n",
+       "97   114079.0                 2911581                 106077   \n",
+       "98   109854.0                 3025916                 101323   \n",
+       "99   109250.0                 3135304                 101632   \n",
+       "\n",
+       "    new_doses_two_vaccines  new_doses_three_vaccines  \n",
+       "0                        2                       NaN  \n",
+       "1                        6                       0.0  \n",
+       "2                        3                       0.0  \n",
+       "3                        0                       0.0  \n",
+       "4                       21                       0.0  \n",
+       "..                     ...                       ...  \n",
+       "95                    1887                       0.0  \n",
+       "96                    3056                       0.0  \n",
+       "97                    4028                       0.0  \n",
+       "98                    4301                       0.0  \n",
+       "99                    3854                       0.0  \n",
+       "\n",
+       "[100 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_vaccine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_secret = {\n",
+    "    'drivername' : \"postgresql+psycopg2\",\n",
+    "    'host' : 'mmai5100postgres.canadacentral.cloudapp.azure.com',\n",
+    "    'port': '5432',\n",
+    "    'username': 'sun111',\n",
+    "    'password':'2023!Schulich',\n",
+    "    'database':'sun111_db'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create url\n",
+    "db_connection_url = sa.engine.URL.create(\n",
+    "drivername = db_secret['drivername'],\n",
+    "    username = db_secret['username'],\n",
+    "    password = db_secret['password'],\n",
+    "    host = db_secret['host'],\n",
+    "    port =   db_secret['port'],\n",
+    "    database = db_secret['database']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = sa.create_engine(db_connection_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create schema\n",
+    "with engine.connect() as connection:\n",
+    "    connection.execute('CREATE SCHEMA IF NOT EXISTS final_exam1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_vaccine.to_sql(\n",
+    "    name = 'vaccine',\n",
+    "    schema = 'final_exam1',\n",
+    "    con = engine,\n",
+    "    if_exists = 'replace',\n",
+    "    index=False,\n",
+    "    method='multi',\n",
+    "    dtype= {\n",
+    "        'new_doses' : sa.types.INTEGER,\n",
+    "        'new_doses_unvaccinated'     : sa.types.INTEGER,\n",
+    "        'new_doses_one_vaccine' : sa.types.INTEGER,\n",
+    "        'new_doses_two_vaccines'     : sa.types.INTEGER,\n",
+    "        'new_doses_three_vaccines' : sa.types.INTEGER\n",
+    "    }   \n",
+    ")"
    ]
   },
   {
