--- a/exercise2.ipynb
+++ b/exercise2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
        "  'total_was_estimated': False}}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
        "'https://data.ontario.ca/api/3/action/help_show?name=datastore_search'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2570,7 +2570,7 @@
        " 'total_was_estimated': False}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2581,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3789,7 +3789,7 @@
        "  'total_individuals_3doses': None}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3800,7 +3800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -4091,7 +4091,7 @@
        "[100 rows x 12 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4110,7 +4110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -4159,7 +4159,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4170,7 +4170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -4219,7 +4219,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4231,7 +4231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4240,24 +4240,23 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 100 entries, 0 to 99\n",
-      "Data columns (total 13 columns):\n",
-      " #   Column                                       Non-Null Count  Dtype  \n",
-      "---  ------                                       --------------  -----  \n",
-      " 0   _id                                          100 non-null    int64  \n",
-      " 1   report_date                                  100 non-null    object \n",
-      " 2   previous_day_total_doses_administered        100 non-null    int64  \n",
-      " 3   previous_day_at_least_one                    100 non-null    int64  \n",
-      " 4   previous_day_fully_vaccinated                100 non-null    int64  \n",
-      " 5   previous_day_3doses                          0 non-null      object \n",
-      " 6   total_doses_administered                     100 non-null    int64  \n",
-      " 7   total_individuals_at_least_one               100 non-null    object \n",
-      " 8   total_individuals_partially_vaccinated       100 non-null    object \n",
-      " 9   total_doses_in_fully_vaccinated_individuals  100 non-null    object \n",
-      " 10  total_individuals_fully_vaccinated           100 non-null    object \n",
-      " 11  total_individuals_3doses                     0 non-null      object \n",
-      " 12  new_doses                                    99 non-null     float64\n",
-      "dtypes: float64(1), int64(5), object(7)\n",
-      "memory usage: 10.3+ KB\n"
+      "Data columns (total 12 columns):\n",
+      " #   Column                                       Non-Null Count  Dtype \n",
+      "---  ------                                       --------------  ----- \n",
+      " 0   _id                                          100 non-null    int64 \n",
+      " 1   report_date                                  100 non-null    object\n",
+      " 2   previous_day_total_doses_administered        100 non-null    int64 \n",
+      " 3   previous_day_at_least_one                    100 non-null    int64 \n",
+      " 4   previous_day_fully_vaccinated                100 non-null    int64 \n",
+      " 5   previous_day_3doses                          0 non-null      object\n",
+      " 6   total_doses_administered                     100 non-null    int64 \n",
+      " 7   total_individuals_at_least_one               100 non-null    object\n",
+      " 8   total_individuals_partially_vaccinated       100 non-null    object\n",
+      " 9   total_doses_in_fully_vaccinated_individuals  100 non-null    object\n",
+      " 10  total_individuals_fully_vaccinated           100 non-null    object\n",
+      " 11  total_individuals_3doses                     0 non-null      object\n",
+      "dtypes: int64(5), object(7)\n",
+      "memory usage: 9.5+ KB\n"
      ]
     }
    ],
@@ -4274,7 +4273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4284,7 +4283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4293,7 +4292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4302,7 +4301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4311,7 +4310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4320,7 +4319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4329,7 +4328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4342,7 +4341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -4497,7 +4496,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4508,7 +4507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4524,7 +4523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4541,7 +4540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4550,18 +4549,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "#create schema\n",
     "with engine.connect() as connection:\n",
-    "    connection.execute('CREATE SCHEMA IF NOT EXISTS final_exam1')"
+    "    connection.execute('CREATE SCHEMA IF NOT EXISTS final_exam')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -4570,7 +4569,7 @@
        "100"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4578,7 +4577,7 @@
    "source": [
     "cleaned_vaccine.to_sql(\n",
     "    name = 'vaccine',\n",
-    "    schema = 'final_exam1',\n",
+    "    schema = 'final_exam',\n",
     "    con = engine,\n",
     "    if_exists = 'replace',\n",
     "    index=False,\n",
